# NexusOS

./: .gitattributes  .gitignore  CLAUDE.md  COPYRIGHT  Cargo.toml  Makefile  OSDK.toml  README.md  log  log2  log4  rust-toolchain.toml
.cargo/: config.toml
.jjconflict-base-0/kernel/: hello
.jjconflict-base-0/kernel/comps/ext4_fs/: Cargo.toml
.jjconflict-base-0/kernel/src/: error.rs
.jjconflict-base-0/ostd/src/: logger.rs
.jjconflict-base-0/ostd/src/boot/: smp.rs
.jjconflict-base-0/ostd/src/mm/: mod.rs  tlb.rs
.jjconflict-base-0/ostd/src/task/: mod.rs
.jjconflict-side-0/: README.md
.jjconflict-side-0/kernel/: Cargo.toml
.jjconflict-side-0/kernel/comps/another_ext4/: Cargo.toml
.jjconflict-side-0/kernel/comps/vfs/: Cargo.toml
.jjconflict-side-0/kernel/libs/nexus-error/: Cargo.toml
.jjconflict-side-0/kernel/src/: thread.rs
.jjconflict-side-0/ostd/libs/virtio-drivers/: Cargo.toml
.jjconflict-side-0/ostd/src/: user.rs
.jjconflict-side-0/ostd/src/drivers/: mod.rs
.jjconflict-side-0/ostd/src/sync/: guard_rwarc.rs
.jjconflict-side-0/ostd/src/timer/: jiffies.rs
.jjconflict-side-1/: .gitignore  OSDK.toml
.jjconflict-side-1/kernel/src/: vm.rs
.jjconflict-side-1/ostd/src/: lib.rs  tracer.rs
.jjconflict-side-1/ostd/src/cpu/: mod.rs
.jjconflict-side-1/ostd/src/mm/: page_prop.rs
cargo/: config.toml
docs/original_docs/: README.md
docs/决赛/slide/: globals.typ  main.typ
docs/初赛/: doc.md  slide.html  slide.pptx  slide.qmd  slide.tex
kernel/: CLAUDE.md  Cargo.toml  hello.S
kernel/comps/: CLAUDE.md
kernel/comps/another_ext4/: CLAUDE.md  Cargo.toml
kernel/comps/another_ext4/src/: error.rs
kernel/comps/another_ext4/src/ext4/: high_level.rs
kernel/comps/another_ext4/src/ext4_defs/: block.rs  dir.rs  inode.rs  mod.rs
kernel/comps/ext4_fs/: Cargo.toml
kernel/comps/ext4_fs/src/: block_dev.rs  filesystem.rs  lib.rs  provider.rs  tests.rs  vnode.rs
kernel/comps/ext4_fs/src/tests/: mem_blk.rs
kernel/comps/vfs/: CLAUDE.md  Cargo.toml
kernel/comps/vfs/src/: cache.rs  impls.rs  lib.rs  manager.rs  path.rs  path_resolver.rs  static_dispatch.rs  traits.rs  types.rs  verror.rs
kernel/comps/vfs/src/impls/: dev_fs.rs  ext4_fs.rs  pipe.rs
kernel/comps/vfs/src/impls/dev_fs/: device.rs  driver.rs  filesystem.rs  handle.rs  provider.rs  vnode.rs
kernel/comps/vfs/src/impls/ext4_fs/: block_dev.rs  filesystem.rs  provider.rs  tests.rs  vnode.rs
kernel/comps/vfs/src/impls/memfs/: fs.rs  handle.rs  provider.rs  vnode.rs
kernel/comps/vfs/src/path/: buf.rs  normalize.rs  slice.rs
kernel/comps/vfs/src/static_dispatch/: filesystem.rs  provider.rs  vnode.rs
kernel/comps/vfs/src/static_dispatch/vnode/: dir.rs  file.rs  symlink.rs
kernel/comps/vfs/src/tests/: basic.rs  concurrent_ops.rs  directory_ops.rs
kernel/drivers/virtio-blk/: Cargo.toml
kernel/drivers/virtio-blk/src/: lib.rs
kernel/libs/block-dev/: Cargo.toml
kernel/libs/nexus-error/: Cargo.toml
kernel/libs/nexus-error/src/: lib.rs
kernel/src/: error.rs  kernel_tracer.rs  lib.rs  syscall.rs  thread.rs  time.rs  vm.rs
kernel/src/syscall/: fs.rs  uts.rs
kernel/src/thread/: clone.rs  exception.rs  execve.rs  exit.rs  fd_table.rs  get_pid.rs  get_ppid.rs  id.rs  init_stack.rs  loader.rs  nanosleep.rs  sched_yield.rs  state.rs  thread_group.rs  wait.rs
kernel/src/thread/loader/: elf_file.rs  elf_image.rs  elf_mapper.rs
kernel/src/time/: gettimeofday.rs  times.rs  tms.rs
kernel/src/vm/: brk.rs  heap.rs  mmap.rs  munmap.rs  page_fault_handler.rs  perms.rs  util.rs
kernel/src/vm/vmar/: dyn_cap.rs  mod.rs  static_cap.rs  vm_mapping.rs
kernel/src/vm/vmo/: dyn_cap.rs  mod.rs  options.rs  static_cap.rs
osdk/: CLAUDE.md
osdk/src/base_crate/: loongarch64.ld.template  mod.rs
osdk/src/commands/: debug.rs
osdk/test-kernel/src/: lib.rs
ostd/: CLAUDE.md  Cargo.toml
ostd/libs/id-alloc/: rustc-ice-2025-06-17T11_31_13-736796.txt
ostd/libs/linux-bzimage/setup/: Cargo.toml
ostd/libs/maitake/: Cargo.toml
ostd/libs/maitake-sync/: Cargo.toml  rustc-ice-2025-06-17T11_31_13-736817.txt
ostd/libs/maitake/libs/util/: Cargo.toml
ostd/libs/maitake/src/: task.rs
ostd/libs/ostd-macros/src/: lib.rs
ostd/libs/ostd-test/: rustc-ice-2025-06-17T11_31_13-736798.txt
ostd/libs/virtio-drivers/: rustc-ice-2025-06-17T11_31_13-736797.txt
ostd/src/: console.rs  error.rs  io_mem.rs  lib.rs  logger.rs  panic.rs  prelude.rs  smp.rs  tracer.rs  user.rs
ostd/src/arch/: mod.rs
ostd/src/arch/loongarch/: irq.rs  mod.rs  pci.rs  plic.rs  qemu.rs  serial.rs
ostd/src/arch/riscv/: irq.rs  mod.rs  plic.rs  serial.rs
ostd/src/boot/: mod.rs  smp.rs
ostd/src/bus/: device_manager.rs  init.rs  mod.rs  virtio_devices.rs
ostd/src/bus/mmio/: bus.rs  common_device.rs  mod.rs
ostd/src/bus/pci/: bar_alloc.rs  bus.rs  cfg_space.rs  mod.rs
ostd/src/cpu/: mod.rs
ostd/src/cpu/local/: cpu_local.rs  mod.rs
ostd/src/drivers/virtio/: block.rs  hal.rs  mod.rs  net.rs
ostd/src/mm/: arch.rs  frame.rs  io.rs  kspace.rs  mod.rs  page_prop.rs  page_table.rs  tlb.rs  vm_space.rs
ostd/src/mm/dma/: dma_stream.rs  mod.rs
ostd/src/mm/frame/: allocator.rs  meta.rs  segment.rs  untyped.rs
ostd/src/mm/heap_allocator/: mod.rs
ostd/src/mm/kspace/: kvirt_area.rs  mod.rs
ostd/src/mm/page_table/: boot_pt.rs  cursor.rs  debug.rs  mod.rs  node.rs  test.rs
ostd/src/sync/: guard_rwarc.rs  guard_rwlock.rs  guard_spin.rs  mod.rs
ostd/src/task/: mod.rs
ostd/src/task/scheduler/: mod.rs
ostd/src/trap/: handler.rs  irq.rs
regression/apps/busybox/: busybox
regression/apps/fork/: fork
regression/apps/hello_pie/: hello
regression/apps/network/tcp/: client  (+1 more)
src/apps/busybox/: busybox
src/apps/execve/: execve  hello
src/apps/fork/: fork
src/apps/hello_pie/: hello
src/apps/pthread/: pthread_test
src/apps/signal_c/: signal_test
src/kxos-user/busybox/: busybox
src/kxos-user/execve/: execve  hello
src/kxos-user/fork/: fork
src/kxos-user/fork_c/: fork
src/kxos-user/hello_c/: hello
src/kxos-user/hello_world/: hello_world
src/kxos-user/signal_c/: divide_zero  sig_action  sig_procmask
(+107 files in other folders)
