[workspace]
resolver = "2"
members = [
    "osdk/test-kernel",
    "ostd",
    "ostd/libs/align_ext",
    "ostd/libs/ostd-macros",
    "ostd/libs/id-alloc",
    "ostd/libs/linux-bzimage/builder",
    "ostd/libs/linux-bzimage/boot-params",
    "ostd/libs/ostd-test",
    "ostd/libs/int-to-c-enum",
    "kernel",
    "ostd/libs/maitake/libs/cordyceps",
    "ostd/libs/maitake/libs/util",
    "ostd/libs/maitake/libs/bitfield",
    "ostd/libs/maitake-sync",
    "ostd/libs/maitake",
    "ostd/libs/virtio-drivers",
    "kernel/libs/aster-rights",
    "kernel/libs/aster-rights-proc",
    "kernel/libs/typeflags",
    "kernel/libs/typeflags-util",
    "kernel/libs/block-dev",
    "kernel/comps/vfs",
    "kernel/drivers/virtio-blk",
    "kernel/comps/ext4_fs",
]
exclude = [
    "osdk",
]

[workspace.lints.clippy]
allow_attributes = "warn"

# Cargo only looks at the profile settings 
# in the Cargo.toml manifest at the root of the workspace

[profile.release]
lto = "thin"

# Release profile configuration with Link Time Optimization (LTO) enabled.
#
# This profile is optimized for maximum runtime performance, 
# (achieving a 2% reduction in latency for the getpid system call).
# However, enabling LTO significantly increases compilation times,
# approximately doubling them compared to when LTO is not enabled.
[profile.release-lto]
inherits = "release"
lto = true
# lto can only be enabled when panic strategy is abort
panic = "abort"
# set codegen-units as the smallest number
codegen-units = 1
