[package]
name = "aster-nix"
version = "0.1.0"
edition = "2021"

[dependencies]
ostd = { path = "../ostd" }
nexus-error = { path = "libs/nexus-error" }
align_ext = { path = "../ostd/libs/align_ext" }
elf_loader = { version = "0.12.0", default-features = false }
aster-rights = { path = "libs/aster-rights" }
aster-rights-proc = { path = "libs/aster-rights-proc" }
typeflags = { path = "libs/typeflags" }
typeflags-util = { path = "libs/typeflags-util" }
bitflags = "2.4.0"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
vfs = { path = "comps/vfs" }
syscall-numbers = "4.0.2"


[lints]
workspace = true
