[package]
name = "another_ext4"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.2.1"
log = "0.4"
axsync = { git = "https://github.com/Starry-OS/axsync.git", optional = true }
ostd = { path = "../../../ostd" }
error-stack = { version = "0.5", default-features = false }

[features]
block_cache = ["dep:axsync"]
fuser_root_inode = []