[package]
name = "vfs"
version = "0.1.0"
edition = "2021"
# authors = ["Your Name <you@example.com>"] # 可选
description = "异步虚拟文件系统 (VFS) for NexusOS"
# license = "..." # 可选

[dependencies]
# 路径根据实际项目结构调整
bitflags = "2.4.0"
id-alloc = { path = "../../../ostd/libs/id-alloc" } 
ostd = { path = "../../../ostd" } 
nexus-error = { path = "../../libs/nexus-error" } 
async-trait = "0.1.88"
tracing = { version = "0.1.41", default-features = false }
another_ext4 = { path = "../another_ext4" }
virtio-drivers = { path = "../../../ostd/libs/virtio-drivers", version = "0.11.0" }
# Cargo.toml
tracing-subscriber = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
maitake = { path = "../../../ostd/libs/maitake" }
