[package]
name          = "mycelium-util"
version       = "0.1.0"
authors       = ["Eliza Weisman <eliza@elizas.website>"]
edition       = "2021"
rust-version  = "1.61.0"
readme        = "README.md"

[features]
default        = []
alloc          = ["cordyceps/alloc", "maitake-sync/alloc"]
no-cache-pad   = ["cordyceps/no-cache-pad", "maitake-sync/no-cache-pad"]

[dependencies]
tracing          = { git = "https://github.com/tokio-rs/tracing", default-features = false, features = ["attributes"] }
cordyceps        = { path = "../cordyceps",        default-features = false }
mycelium-bitfield= { path = "../bitfield",         default-features = false }
maitake-sync     = { path = "../../../maitake-sync", default-features = false }

[dev-dependencies]
proptest          = "1"
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false, features = ["attributes", "std"] }
tracing-subscriber= { git = "https://github.com/tokio-rs/tracing", package = "tracing-subscriber", features = ["fmt", "env-filter"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[target.'cfg(loom)'.dev-dependencies]
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", package = "tracing-subscriber", default-features = false, features = ["fmt"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
